--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ python-decouple==3.1
 pytz==2019.2
 sqlparse==0.3.0
 static3==0.7.0
-# gunicorn==19.8.1
-# psycopg2==2.7.4
+gunicorn==19.8.1
+psycopg2==2.7.4
