--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.2.5
+Django>=2.2.13
 python-decouple==3.1
 pytz==2019.2
 sqlparse==0.3.0
 static3==0.7.0
 gunicorn==19.8.1
-psycopg2==2.7.4
+#psycopg2==2.8.4
 django-extensions==2.0.7
 django-test-without-migrations==0.6
