--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ dist: xenial
 language: python
 python:
   - "3.8"
+services:
+  - postgresql
 install:
   - cp contrib/env-sample .env
   - pip install -q -r requirements.txt
